--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.0.8",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.0.8",
+    "volar-service-vetur": "^0.0.62",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
