--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.20.1",
     "eslint-plugin-vue": "^9.32.0",
     "prettier": "^3.5.1",
+    "rollup": "^4.35.0",
     "vite": "^6.1.0",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
