--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.12",
     "@tailwindcss/vite": "^4.0.8",
+    "lightningcss-linux-x64-gnu": "^1.29.2",
     "pinia": "^3.0.1",
+    "sass-embedded-linux-x64": "^1.85.1",
     "tailwindcss": "^4.0.8",
     "volar-service-vetur": "^0.0.62",
     "vue": "^3.5.13",
