--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
-  "name": "app-perhitungan",
+  "name": "splitbill",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/oxide-linux-x64-gnu": "^4.0.12",
-    "@tailwindcss/vite": "^4.0.8",
-    "lightningcss-linux-x64-gnu": "^1.29.2",
-    "pinia": "^3.0.1",
-    "sass-embedded-linux-x64": "^1.85.1",
-    "tailwindcss": "^4.0.8",
-    "volar-service-vetur": "^0.0.62",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "@tailwindcss/vite": "^4.0.12",
+    "tailwindcss": "^4.0.12",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vitejs/plugin-vue-jsx": "^4.1.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "eslint": "^9.20.1",
-    "eslint-plugin-vue": "^9.32.0",
-    "prettier": "^3.5.1",
-    "rollup": "^4.35.0",
-    "vite": "^6.1.0",
+    "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
